fixed the app name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,14 @@
 version: '2'
 services:
-  ratesquery:
+  hello-world:
     build:
       context: .
       dockerfile: Dockerfile-dev
-    image: rates-query
-    command: nodemon -L --debug /app/src/cluster.js
+    image: hello-world
+    command: nodemon -L --debug 
     volumes:
-      - ./src:/app/src
-      - ./test:/app/test
+      - .:/app/src
     ports:
       - "3000:3000"
       - "5858:5858"
-    extra_hosts:
-      - "rates-couch-dev:127.0.0.1"
-      - "provider-data-dev:127.0.0.1"
+#    extra_hosts:
